; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-path.c_test_path_changed.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-path.c_test_path_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"/tmp/test-path_changed\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"path-changed.path\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"w\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @test_path_changed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_path_changed(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  store i32* null, i32** %5, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = ptrtoint i32* %6 to i32
  %8 = call i32 @assert_se(i32 %7)
  %9 = load i8*, i8** %3, align 8
  %10 = call i64 @touch(i8* %9)
  %11 = icmp sge i64 %10, 0
  %12 = zext i1 %11 to i32
  %13 = call i32 @assert_se(i32 %12)
  %14 = load i32*, i32** %2, align 8
  %15 = call i64 @manager_load_startable_unit_or_warn(i32* %14, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0), i32* null, i32** %5)
  %16 = icmp sge i64 %15, 0
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert_se(i32 %17)
  %19 = load i32*, i32** %5, align 8
  %20 = call i64 @unit_start(i32* %19)
  %21 = icmp sge i64 %20, 0
  %22 = zext i1 %21 to i32
  %23 = call i32 @assert_se(i32 %22)
  %24 = load i8*, i8** %3, align 8
  %25 = call i32* @fopen(i8* %24, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  store i32* %25, i32** %4, align 8
  %26 = load i32*, i32** %4, align 8
  %27 = ptrtoint i32* %26 to i32
  %28 = call i32 @assert_se(i32 %27)
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @fclose(i32* %29)
  %31 = load i32*, i32** %2, align 8
  %32 = load i32*, i32** %5, align 8
  %33 = load i8*, i8** %3, align 8
  %34 = call i32 @check_stop_unlink(i32* %31, i32* %32, i8* %33, i32* null)
  ret void
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i64 @touch(i8*) #1

declare dso_local i64 @manager_load_startable_unit_or_warn(i32*, i8*, i32*, i32**) #1

declare dso_local i64 @unit_start(i32*) #1

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @check_stop_unlink(i32*, i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
